jenkins/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: monkey-ingress
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jenkins
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jenkins
    spec:
      containers:
      - name: jenkins
        image: dev210/monkey-jenkins:2.0
        ports:
        - containerPort: 8080
        resources: {}
        
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: monkey-ingress
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jenkins
  ports:
  - port: 8090
    targetPort: 8080
    protocol: TCP
